gradient overlay with background-image property

--- a/gradient-overlay/gradient-overlay.html
+++ b/gradient-overlay/gradient-overlay.html
@@ -8,7 +8,7 @@
 
   <body>
     <main>
-      <h1>Gradient overlay with background-image property</h1>
+      <h1>Gradient overlay with background image property</h1>
       <div class="linear-gradient"></div>
     </main>
   </body>
